--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                 const textDiv = document.createElement("div");
                 textDiv.textContent = "Text";
 
-                newDiv.appendChild(img, textDiv)
+                newDiv.appendChild(img)
+                newDiv.appendChild(textDiv)
 
 
             } else if (iter % 6 == 1) {
@@ -63,7 +64,8 @@
                 const textDiv = document.createElement("div");
                 textDiv.textContent = "Text";
 
-                newDiv.appendChild(img, textDiv)
+                newDiv.appendChild(img)
+                newDiv.appendChild(textDiv)
 
             } else if (iter % 6 == 2) {
                 newDiv.className = "hersheys-div";
@@ -76,7 +78,8 @@
                 const textDiv = document.createElement("div");
                 textDiv.textContent = "Text";
 
-                newDiv.appendChild(img, textDiv)
+                newDiv.appendChild(img)
+                newDiv.appendChild(textDiv)
             } else if (iter % 6 == 3) {
                 newDiv.className = "laffytaffy-div";
                 const container = document.createElement("div");
@@ -88,7 +91,8 @@
                 const textDiv = document.createElement("div");
                 textDiv.textContent = "Text";
 
-                newDiv.appendChild(img, textDiv)
+                newDiv.appendChild(img)
+                newDiv.appendChild(textDiv)
             } else if (iter % 6 == 4) {
                 newDiv.className = "nerds-div";
                 const container = document.createElement("div");
@@ -100,7 +104,8 @@
                 const textDiv = document.createElement("div");
                 textDiv.textContent = "Text";
 
-                newDiv.appendChild(img, textDiv)
+                newDiv.appendChild(img)
+                newDiv.appendChild(textDiv)
             } else if (iter % 6 == 5) {
                 newDiv.className = "twix-div";
                 const container = document.createElement("div");
@@ -112,7 +117,8 @@
                 const textDiv = document.createElement("div");
                 textDiv.textContent = "Text";
 
-                newDiv.appendChild(img, textDiv)
+                newDiv.appendChild(img)
+                newDiv.appendChild(textDiv)
             }
             
             // Add event listener
