--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                 const img = document.createElement("img");
                 img.src = "candyCorn.jpg";
                 img.alt = "Candy Corn";
+                img.height = "25";
+                img.width = "25"
+
                 
                 const textDiv = document.createElement("div");
                 textDiv.textContent = "Text";
