Completed web checks

--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
     font-size: 1.2rem;
   }
 
+  
   .candy-box:hover {
     background-color: #ffa500;
+    
   }
 
 
@@ -66,7 +68,7 @@
   </header>
   
   <main>
-    <section class="candy-collection">
+    <div class="candy-collection">
       <div class="candy-box">
         <img src="butterfinger.webp" alt="butterfinger">
         <p>Butterfingers</p>
@@ -91,7 +93,7 @@
         <img src="twix.webp" alt="twix">
         <p>Twix</p>
       </div>
-    </section>
+    </div>
   </main>
   
   <footer>
